# ide

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  add_marketplace_setting.cjs  deny.toml  package-lock.json  package.json  pnpm-lock.yaml  product.json  replace_copilot.cjs  skills-lock.json  turbo.json
.agents/skills/launch/: SKILL.md
.devcontainer/: README.md
.eslint-plugin-local/: README.md  vscode-dts-vscode-in-comments.ts
.github/: CODEOWNERS  commands.json  copilot-instructions.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature.yml  03-feedback.yml  04-documentation.yml  06-improvement.yml  07-fix.yml  08-dependencies.yml  bug_report.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  deps.md  docs.md  feature.md  fix.md  improvement.md
.github/agents/: data.md  demonstrate.md  sessions.md
.github/instructions/: accessibility.instructions.md  agentHostTesting.instructions.md  ai-customization.instructions.md  interactive.instructions.md  kusto.instructions.md  notebook.instructions.md  sessions.instructions.md  telemetry.instructions.md  tree-widgets.instructions.md
.github/prompts/: build-champ.prompt.md  doc-comments.prompt.md  find-duplicates.prompt.md  find-issue.prompt.md  fix-error.prompt.md  migrate.prompt.md
.github/workflows/: labeler.yml  quality-comment.yml  quality.yml  release-trixty.yml  release.yml  security-audit.yml  test-build.yml
addons/builtin.language.example/: index.js
addons/example-addon/: README.md  index.js  package.json
apps/desktop/: eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  tsc_output.txt  tsc_output_2.txt  tsc_output_2_utf8.txt  tsc_output_utf8.txt  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: about.rs  cli.rs  discord_rpc.rs  error.rs  extensions.rs  fs_atomic.rs  fs_guard.rs  http.rs  lib.rs  pty.rs  tunnel.rs
apps/ide/: eslint.config.mjs  next.config.ts  package.json  sentry.edge.config.ts  vitest.config.ts
apps/ide/public/: splashscreen.html
apps/ide/src/: assets.d.ts
apps/ide/src-tauri/: Cargo.toml  tauri.conf.json
apps/ide/src-tauri/icons/: icon.icns
apps/ide/src-tauri/src/: about.rs  cli.rs  discord_rpc.rs  fs_atomic.rs  fs_watcher.rs  http.rs  pty.rs
apps/landing/: package.json
cli/src/: constants.rs  update_service.rs
cli/src/commands/: agent_host.rs  args.rs  serve_web.rs
cli/src/desktop/: version_manager.rs
cli/src/tunnels/: agent_host.rs  code_server.rs  control_server.rs  dev_tunnels.rs  paths.rs  singleton_client.rs
cli/src/util/: errors.rs  is_integrated.rs
docs/: cli.md
extensions/: CONTRIBUTING.md
extensions/configuration-editing/schemas/: attachContainer.schema.json  devContainer.vscode.schema.json
extensions/configuration-editing/src/: configurationEditingMain.ts  settingsDocumentHelper.ts
extensions/copilot/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  package.nls.json
extensions/copilot/.github/: commands.json  copilot-instructions.md  dependabot.yml
extensions/copilot/chat-lib/: README.md  package.json
extensions/copilot/docs/: NES_EXPECTED_EDIT_CAPTURE.md  tools.md
extensions/copilot/test/: testExecutionInExtension.ts
extensions/css-language-features/: CONTRIBUTING.md  README.md  package.nls.json
extensions/css-language-features/schemas/: package.schema.json
extensions/emmet/: CONTRIBUTING.md  package.nls.json
extensions/emmet/src/: util.ts
extensions/extension-editing/src/: constants.ts  extensionLinter.ts
extensions/git/: README.md  package.nls.json
extensions/git/src/: askpassManager.ts  model.ts  util.ts
extensions/github/: README.md  package.nls.json
extensions/github-authentication/src/: config.ts
extensions/grunt/: README.md  package.json  package.nls.json
extensions/gulp/: README.md
extensions/html-language-features/: CONTRIBUTING.md  package.nls.json
extensions/html-language-features/schemas/: package.schema.json
extensions/ipynb/: README.md
extensions/ipynb/src/: common.ts  deserializers.ts  serializers.ts
extensions/jake/: README.md  package.nls.json
extensions/json-language-features/: CONTRIBUTING.md  package.nls.json
extensions/markdown-language-features/: package.nls.json
extensions/markdown-language-features/preview-src/: index.ts
extensions/markdown-language-features/src/: markdownEngine.ts
extensions/markdown-math/: README.md
extensions/media-preview/: package.nls.json
extensions/media-preview/src/: audioPreview.ts  videoPreview.ts
extensions/merge-conflict/: README.md
extensions/microsoft-authentication/src/: betterSecretStorage.ts
extensions/notebook-renderers/: README.md  package.json
extensions/npm/: package.nls.json
extensions/references-view/: README.md
extensions/swift/syntaxes/: swift.tmLanguage.json
extensions/terminal-suggest/: package.nls.json
extensions/trixty-ai/: package-lock.json  package.json  tsconfig.json
extensions/trixty-ai/src/: extension.ts
extensions/typescript-language-features/: package.nls.json
extensions/vscode-api-tests/: package.json
extensions/vscode-colorize-perf-tests/: package.json
extensions/vscode-colorize-tests/: package.json
extensions/vscode-test-resolver/: package.json
registry/: README.md  marketplace.json
remote/: package-lock.json
resources/darwin/: code.icns
scratch/: format_files.ts
scripts/: build-extension-worker.mjs  build-trixty.ps1  build-trixty.sh  publish.mjs  sync-agent-host-protocol.ts  sync-version.mjs  xterm-symlink.ps1
src/: bootstrap-meta.ts  bootstrap-node.ts  main.ts  server-main.ts
src/typings/: thenable.d.ts
src/vs/sessions/: LAYOUT.md  (+2 more)
src/vscode-dts/: vscode.d.ts
test/: README.md
test/automation/: README.md  package.json
test/mcp/: README.md
test/sanity/: README.md
test/smoke/: Audit.md  README.md
test/unit/: README.md
(+731 files in other folders)
