[package]
name = "TrixtyIDE"
version = "1.0.7"
description = "A Tauri App"
authors = ["jmaxdev"]
license = "UPL-1.0"
repository = "https://github.com/TrixtyAI/ide"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-positioner = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
portable-pty = "0.9.0"
tokio-util = "0.7.18"
walkdir = "2.5"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
urlencoding = "2"
sysinfo = "0.36.1"
scraper = "0.19"
html2text = "0.12"
tauri-plugin-http = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
