[package]
name = "TrixtyIDE"
version = "1.1.1"
description = "A Tauri App"
authors = ["jmaxdev"]
license = "UPL-1.0"
repository = "https://github.com/TrixtyAI/ide"
edition = "2021"
rust-version = "1.77.2"
default-run = "TrixtyIDE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# `tide` is a tiny terminal launcher that spawns the main TrixtyIDE binary
# with the workspace path supplied by the user (see `src/bin/tide.rs`). It
# is intentionally decoupled from the `app_lib` crate so it doesn't pull in
# Tauri, tokio, reqwest, etc. — a single-purpose ~200-line process that
# resolves an install path and execs the IDE.
[[bin]]
name = "TrixtyIDE"
path = "src/main.rs"

[[bin]]
name = "tide"
path = "src/bin/tide.rs"


[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-positioner = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
portable-pty = "0.9.0"
walkdir = "2.5"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "http2", "charset", "gzip", "brotli"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
scraper = "0.19"
html2text = "0.12"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
notify = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
