[package]
name = "TrixtyIDE"
version = "1.1.11"
description = "A Tauri App"
authors = ["jmaxdev"]
license = "UPL-1.0"
repository = "https://github.com/TrixtyAI/ide"
edition = "2021"
rust-version = "1.77.2"
default-run = "TrixtyIDE"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# `tide` is a tiny terminal launcher that spawns the main TrixtyIDE binary
# with the workspace path supplied by the user (see `src/bin/tide.rs`). It
# is intentionally decoupled from the `app_lib` crate so it doesn't pull in
# Tauri, tokio, reqwest, etc. — a single-purpose ~200-line process that
# resolves an install path and execs the IDE.
[[bin]]
name = "TrixtyIDE"
path = "src/main.rs"

[[bin]]
name = "tide"
path = "src/bin/tide.rs"


[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
log = "0.4"
tauri = { version = "2.10.3", features = [ "image-ico", "image-png", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-positioner = "2.0.0"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
portable-pty = "0.9.0"
walkdir = "2.5"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "http2", "charset", "gzip", "brotli"] }
tokio = { version = "1", features = ["time", "rt-multi-thread", "process", "net", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
urlencoding = "2"
sysinfo = { version = "0.36.1", default-features = false, features = ["system"] }
scraper = "0.19"
html2text = "0.12"
tauri-plugin-http = "2"
notify = "6"
sentry = { version = "0.34", features = ["backtrace", "contexts", "panic", "transport", "reqwest"] }
sentry-tracing = "0.34"
url = "2"
# OS-native secret store: macOS Keychain, Windows Credential Manager,
# Linux Secret Service / kwallet. Used to back AI provider API keys
# instead of writing them to `settings.json` plaintext. Pinned to 3.x
# because keyring 4.x pulls `turso` (an embedded SQLite engine) and
# `bon-macros` as transitive deps for its DB-backed unified store —
# none of which we use; our `Entry::new` flow only needs the native
# OS keychain backends that 3.x exposes by default.
keyring = "3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"
